[package]
name = "redis-rate"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Rate limiting crate depends on Redis"
readme = "README.md"

[features]
default = []
local_accelerate = []

[dependencies]
redis = "0.29"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"