[package]
name = "redis-rate"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "Rate limiting crate depends on Redis"
readme = "README.md"
documentation = "https://docs.rs/redis-rate"
homepage = "https://github.com/slhmy/redis-rate-rs"
repository = "https://github.com/slhmy/redis-rate-rs"


[features]
default = []
local_accelerate = []

[dependencies]
redis = "0.29"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"